<resources>
    <string name="app_name">LifeSync</string>
    <string name="_2nd_page">2nd Page</string>
    <string name="task_manager">Task Manager</string>
    <string name="budget_tracker">Budget Tracker</string>
    <string name="journal">Journal</string>
    <string name="main_page">Main Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add">+</string>
    <string name="name">Name</string>
    <string name="deadline_date">Select Date</string>
    <string name="deadline_time">Select Time</string>
    <string name="priority">Priority (1(Low)-5(High))</string>
    <string name="duration">Duration(hours)</string>
    <string name="backAddTask">Back</string>
    <string name="deletebtn">Remove</string>
    <string name="amount">Amount</string>
    <string name="refresh">Refresh</string>
    <string name="priority_1_low_3_high">Priority(1(low)-3(high))</string>
    <string name="change_status">Change Status</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="savings">SAVINGS:</string>
    <string name="income">INCOME:</string>
    <string name="spent">SPENT:</string>
    <string name="expenses">Expenses</string>
    <string name="select_category">Select Category</string>
    <string name="enter_income_monthly">Enter Income (Monthly)</string>
    <string-array name="category_items">
        <item>Other</item>
        <item>Food</item>
        <item>HealthCare</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Subscriptions</item>
        <item>Transportation</item>
        <item>Travel</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="add_new_task">Add New Task</string>
</resources>