<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Teal"
    >
    <Button
        android:id="@+id/backAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backAddTask"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/tm_icon"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@+id/taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:hint="@string/name"
        />
    <EditText
        android:id="@+id/taskDeadlineDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:inputType="date"
        android:hint="@string/deadline_date"/>
    <EditText
        android:id="@+id/taskDeadlineTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:inputType="time"
        android:hint="@string/deadline_time"/>

    <EditText
        android:id="@+id/taskPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/priority"/>
    <EditText
        android:id="@+id/taskDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/duration"/>
    <Button
        android:id="@+id/registerTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add_task"
        android:layout_margin="20dp"/>
</LinearLayout>