<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/task_manager"
        android:icon="@drawable/icon_task_manager"
        android:id="@+id/tmItem"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/budget_tracker"
        android:icon="@drawable/icon_budget_tracker"
        android:id="@+id/btItem"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/journal"
        android:icon="@drawable/icon_journal"
        android:id="@+id/jItem"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Sign Out"
        android:icon="@drawable/icon_sign_out"
        android:id="@+id/signOut"/>
</menu>