<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Teal"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/backAddExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backAddTask"
            />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/tm_icon"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:layout_margin="20dp"
            />
        <EditText
            android:id="@+id/ExpenseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:hint="@string/name"
            />
        <EditText
            android:id="@+id/ExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/amount"/>

    </LinearLayout>

    <Button
        android:id="@+id/registerExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_add_expense"
        android:layout_margin="20dp"/>
</RelativeLayout>