<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    style="@style/ScreenBackground">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ExpenseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:textColorHint="@color/DarkBackground"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/amount"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ExpensePriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/priority_1_low_3_high"
            android:textColorHint="@color/DarkBackground"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <Spinner
            android:id="@+id/ExpenseCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:prompt="@string/select_category"
            android:textColorHint="@color/DarkBackground"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>