<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    style="@style/ScreenBackground">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:textColorHint="@color/DarkBackground"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:focusable="false"
            android:inputType="none"
            android:hint="@string/deadline_date"
            android:textColorHint="@color/DarkBackground"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/priority"
            android:textColorHint="@color/DarkBackground"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textview"
            style="@style/viewBackground"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/duration"
            android:textColorHint="@color/DarkBackground"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>